--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ELSreen</string>
+    <string name="facebook_app_id">636177143389470</string>
 </resources>
